made content action buttons more consistent

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -237,9 +237,8 @@
   textarea.caption::-webkit-input-placeholder {
     color: $tn-light-grey;
   }
-  .one, .two, .three, .four, .five, .six,
 
-  .seven, .eight, .nine, .ten, .eleven, .twelve {
+  .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
     @include transition(width 0.25s ease-in-out);
   }
 }
