Feature spec for tenon callouts

--- a/app/views/tenon/tenon_callouts/_form.html.haml
+++ b/app/views/tenon/tenon_callouts/_form.html.haml
@@ -5,6 +5,8 @@
       = link_to "New Tenon Callout", new_tenon_callout_path, class: 'btn btn-block btn-info'
 
 = form_for @tenon_callout, builder: Tenon::FormBuilder do |f|
+  = error_messages_for :tenon_callout
+
   .fields.large.tabs
     .tab-pane.active#details
       .form-group
