--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -24,12 +24,15 @@
 .tn-tc-main-actions {
 
   a {
-    margin-right: 20px;
-    color: $tn-black;
+    @include transition(all 0.3s ease);
+    margin: 10px 20px 0 0;
     text-transform: uppercase;
     font-size: 16px;
 
     span {
+      position: relative;
+      top: -2px;
+      padding-left: 5px;
       font-size: 12px;
     }
 
