--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -35,10 +35,22 @@
 }
 
 .modal-content {
-  position: absolute;
+
+  @include media($tablet-breakpoint) {
+    @include transform(translate(-50%, 0));
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    width: 600px;
+  }
+
+  @include media($mobile-breakpoint) {
+    position: absolute;
+    width: 100%;
+  }
+
   overflow-x: hidden;
   overflow-y: auto;
-  width: 100%;
   outline: none;
   border-radius: 2px;
   background-color: $tn-light-grey;
@@ -117,18 +129,6 @@
 .modal-footer .btn-block + .btn-block {
   margin-left: 0;
 }
-
-@include media($tablet-breakpoint) {
-
-  .modal-content {
-    @include transform(translate(-50%, 0));
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    width: 600px;
-  }
-}
-
 
 .modal-tab-links {
   margin: 0;
