--- a/app/views/tenon/assets/crop.html.haml
+++ b/app/views/tenon/assets/crop.html.haml
@@ -13,5 +13,4 @@
       .crop_buttons.right
         = f.check_box :duplicate, checked: true, class: 'tn-checkbox-left'
         = f.label :duplicate, "Create New Asset From Crop?", class: 'left'
-        .right
-          = f.submit "Save", class: 'btn btn-primary'
+        .right= f.submit "Save", class: 'btn btn-primary'
