make content library modal scroll vertically if necessary

--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -27,7 +27,8 @@
 .modal-dialog {
   position: relative;
   z-index: 1050;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
   width: 100vw;
