use factor[e] logo instead of tenon logo

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -91,15 +91,8 @@
       color: $tn-dark-grey;
       text-align: right;
 
-      &:hover {
-        color: $tn-black;
-
-        a {
-          color: $tn-black;
-        }
-      }
-
       i {
+        @include transition(all 0.3s ease);
         font-size: 20px;
       }
 
@@ -138,6 +131,20 @@
   }
 
   .tn-tc-row:hover {
+
+    &:hover {
+      .tn-tc-topbar {
+        color: $tn-black;
+
+        a {
+          color: $tn-black;
+        }
+
+        i {
+          color: $tn-black;
+        }
+      }
+    }
 
     .tn-tc-topbar {
       opacity: 1;
