--- a/app/assets/stylesheets/tenon/layout/util-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/util-nav.css.scss
@@ -8,7 +8,7 @@
   font-family: $tn-open-sans;
 
   a {
-    color: $tn-light-grey;
+    color: $tn-off-white;
     text-transform: uppercase;
     font-size: 12px;
 
@@ -99,7 +99,7 @@
       }
 
       &:first-child a {
-        padding: 8px 0 8px 20px;
+        padding: 10px;
         width: 60px;
         font-weight: bold;
         font-style: italic;
