fixed type Seach => Search

--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -7,7 +7,7 @@
     %nav
       %ul
         %li.active= link_to "Page Content", '#details', data: {toggle: 'tab'}
-        %li= link_to "Seach Optimization", '#seo', data: {toggle: 'tab'}
+        %li= link_to "Search Optimization", '#seo', data: {toggle: 'tab'}
 
 = form_for @page, :builder => Tenon::FormBuilder do |f|
   = error_messages_for :page
