added a pure CSS contenteditable placeholder

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -286,3 +286,8 @@
     background: lighten($tn-primary, 10%);
   }
 }
+
+[contenteditable=true]:empty:not(:focus):before {
+  content: attr(data-ph);
+  color: $tn-med-grey;
+}
