added a pure CSS contenteditable placeholder

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -288,6 +288,6 @@
 }
 
 [contenteditable=true]:empty:not(:focus):before {
-  content: attr(data-ph);
+  content: attr(data-placeholder);
   color: $tn-med-grey;
 }
