--- a/app/views/tenon/tenon_content/piece_types/form/_text.html.haml
+++ b/app/views/tenon/tenon_content/piece_types/form/_text.html.haml
@@ -1,4 +1,4 @@
-.editable-text{ 'data-placeholder' => "Enter your text here..." }= raw f.object.try(:content)
+.editable-text{ 'data-placeholder' => "--" }= raw f.object.try(:content)
 = f.hidden_field :content
 = f.hidden_field :position
 = f.hidden_field :size
