--- a/app/assets/stylesheets/tenon/ui/section-headers.css.scss
+++ b/app/assets/stylesheets/tenon/ui/section-headers.css.scss
@@ -18,7 +18,7 @@ header {
   border-bottom: 1px solid $tn-med-grey;
   background: $tn-light-grey;
   color: $tn-slate;
-  font-size: 12px;
+  font-size: 13px;
 
   h1 {
     float: left;
@@ -36,11 +36,11 @@ header {
       clear: both;
       border-top: 1px solid $tn-med-grey;
       border-left: 0;
+      padding-left: 12px;
     }
 
     @include media($tablet-breakpoint) {
       float: right;
-      // padding-right: 12px;
     }
 
     position: relative;
@@ -48,7 +48,7 @@ header {
     input[type=text] {
       display: inline-block;
       margin: 0;
-      padding: 0 0 0 20px;
+      padding: 0 0 0 16px;
       height: 50px;
       border: 0;
       background: none;
@@ -61,8 +61,6 @@ header {
   .header-tool {
 
     @include media($mobile-breakpoint) {
-      // margin-right: 5px;
-      // margin-left: 0;
       border-right: 1px solid $tn-med-grey;
       border-left: 0;
     }
@@ -71,35 +69,11 @@ header {
     padding: 0;
     height: 50px;
     border-left: 1px solid $tn-med-grey;
-    color: $tn-label;
     vertical-align: middle;
     font-size: 20px;
 
-    i {
-      color: $tn-label;
+    &:last-child {
+      margin-right: 0;
     }
-
-    a {
-      display: inline-block;
-      padding: 11px 20px 0;
-      width: 100%;
-      height: 50px;
-      color: $tn-label;
-
-      &:hover {
-        background-color: $tn-primary;
-        color: #fff;
-        text-decoration: none;
-
-        i {
-          color: #fff;
-        }
-      }
-    }
-
-    // &:last-child {
-    //   margin-right: 0;
-    // }
-
   }
 }
