--- a/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
@@ -6,7 +6,17 @@
     top: 20px;
     left: 50%;
     z-index: 1040;
+    max-width: 100vw;
+    max-height: 100vh;
     background-color: $tn-light-grey;
+
+    @media screen and (orientation: portrait) {
+      max-width: 95vw;
+    }
+
+    @media screen and (orientation: landscape) {
+      max-height: 95vh;
+    }
 
     .image-holder {
       padding: 20px;
@@ -33,25 +43,12 @@
       padding: 0 20px 20px;
     }
 
-    // @media screen and (orientation: portrait) {
-    //   .preview {
-    //     max-width: 90vw;
-    //   }
-    // }
-
-    // @media screen and (orientation: landscape) {
-
-    //   .preview {
-    //     max-height: 85vh;
-    //   }
-    // }
-
     .jcrop-keymgr {
       display: none;
     }
 
     img {
-      max-width: 85vw;
+      max-width: 80vw;
       max-height: 80vh;
     }
   }
