--- a/app/views/tenon/assets/crop.html.haml
+++ b/app/views/tenon/assets/crop.html.haml
@@ -6,6 +6,7 @@
       %h4#myModalLabel{ class: 'modal-title'}
         Crop
     .image-holder= image_tag(@asset.attachment.url, id: 'cropbox', data: { width: @asset.dimensions(:original)[0], height: @asset.dimensions(:original)[1] })
+    .spinner= fa_icon('spinner spin')
 
     = form_for @asset, data: {remote: true} do |f|
       - [:crop_x, :crop_y, :crop_w, :crop_h].each do |field|
@@ -13,4 +14,4 @@
       .crop_buttons.right
         = f.check_box :duplicate, checked: true, class: 'tn-checkbox-left'
         = f.label :duplicate, "Create New Asset From Crop?", class: 'left'
-        .right= f.submit "Save", class: 'btn btn-primary'
+        .right= f.submit "Save", class: 'save btn btn-primary'
