--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -3,13 +3,13 @@
   = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
     = error_messages_for :asset
     .fields.full
-      .form-group
-        = f.text_field :title, placeholder: '--', explanation: 'Enter a title for your asset.  You can leave this blank to just use the file name as the title.  If you upload multiple assets a numerical series will be created.'
+      .form-group.full
+        = f.text_field :title, placeholder: '--', explanation: "Enter a title for your asset.  You can leave this blank to just use the file name as the title. #{defined?(multiple) ? 'If you upload multiple assets a numerical series will be created.' : '' }"
 
       .form-group
         .browse-button-holder
           .fileupload.btn.btn-primary.browse
-            %span#choose-files Choose Files
+            %span#choose-files= defined?(multiple) ? 'Choose Files' : 'Choose File'
             %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
     .spacer
