--- a/app/views/tenon/assets/_sidebar_index.html.haml
+++ b/app/views/tenon/assets/_sidebar_index.html.haml
@@ -3,7 +3,7 @@
   .sidebar
     .content
       %h2 Asset Library
-      = link_to "Upload New", '#', class: 'btn btn-info btn-block', data: {'modal-target' => '#new-asset', 'modal-title' => 'Upload Assets'}
+      = link_to "Upload New", '#', class: 'btn btn-info btn-block', data: {'modal-target' => '#new-asset', 'modal-title' => 'Upload Assets', 'keyboard' => 'false' }
 
     %h4 File Types
     %nav
