remove tabs from asset attachment modal

--- a/app/assets/stylesheets/tenon/ui/asset-attachment.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-attachment.css.scss
@@ -87,6 +87,12 @@
   }
 }
 
+#upload-asset {
+  border-bottom: 1px solid $tn-med-grey;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
 #pick-asset .filter {
   margin-bottom: 10px;
 
