--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -1,12 +1,7 @@
-%ul.modal-tab-links
-  %li.active.tab= link_to "New Image", '#upload-asset', data: {toggle: 'tab'}, class: 'btn btn-info'
-  %li.tab= link_to "Asset Library", '#pick-asset', data: {toggle: 'tab'}, class: 'btn btn-info'
-  .spacer
-
 .modal-tab-pane.tab-content
-  #upload-asset.tab-pane.active= render "tenon/assets/form"#, multiple: @multiple
+  #upload-asset= render "tenon/assets/form"
 
-  #pick-asset.tab-pane
+  #pick-asset
     .filter= text_field_tag :q, '', id: 'quick-search', class: 'filter search', placeholder: 'Filter Assets', data: { 'record-list' => '.asset-list' }
     .asset-list-scroller
       %ul#modal-asset-list.asset-list.record-grid.infinite-scroll{data: {records: {url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset'}}}
