--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -55,6 +55,10 @@
   outline: none;
   border-radius: 2px;
   background-color: $tn-light-grey;
+
+  h5 {
+    margin-bottom: 10px;
+  }
 }
 
 .modal-backdrop {
