Support for dropdown menus in header

--- a/app/assets/stylesheets/tenon/tenon.css.scss
+++ b/app/assets/stylesheets/tenon/tenon.css.scss
@@ -44,6 +44,7 @@
 @import 'tenon/ui/callouts';
 @import 'tenon/ui/forms';
 @import 'tenon/ui/generic-loader';
+@import 'tenon/ui/header-menu';
 @import 'tenon/ui/list-style-toggle';
 @import 'tenon/ui/login';
 @import 'tenon/ui/medium-editor';
