Add the HTML5 history api for record list updates

--- a/app/assets/stylesheets/tenon/layout/sidebar.css.scss
+++ b/app/assets/stylesheets/tenon/layout/sidebar.css.scss
@@ -68,7 +68,7 @@
       li {
         padding: 10px 15px;
 
-        &.active {
+        &.active, &:target {
           background: $tn-sidebar-highlight;
         }
       }
