--- a/app/assets/stylesheets/tenon/ui/section-headers.css.scss
+++ b/app/assets/stylesheets/tenon/ui/section-headers.css.scss
@@ -37,6 +37,7 @@ header {
       border-top: 1px solid $tn-med-grey;
       border-left: 0;
       padding-left: 12px;
+      height: 50px;
     }
 
     @include media($tablet-breakpoint) {
