--- a/app/views/tenon/settings/_general.html.haml
+++ b/app/views/tenon/settings/_general.html.haml
@@ -4,7 +4,7 @@
     = text_field_tag "settings[site_title]", Tenon::MySettings.site_title
 
   .form-group
-    %label Site URL
+    %label Site Domain
     = text_field_tag "settings[site_url]", Tenon::MySettings.site_url
 
   .form-group
