--- a/app/views/tenon/tenon_content/_row.html.haml
+++ b/app/views/tenon/tenon_content/_row.html.haml
@@ -4,17 +4,21 @@
     .actions
       %i.fa.fa-arrows.drag-anchor
 
-      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Content Above", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true' do
+      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true', 'data-tooltip' => '', title: 'Insert Content' do
         = fa_icon('plus-circle')
-        %span Above
-
-      = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Content Below", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true' do
-        = fa_icon('plus-circle')
-        %span Below
 
       = link_to_remove_association(fa_icon('trash-o'), f, {'data-confirm' => 'Are you sure?', 'data-wrapper-class' => 'tn-tc-row'})
 
     .spacer
 
   .tn-tc-fields= render row_partial, f: f
+
+  / This needs to only display for last row
+  / .tn-tc-topbar
+  /   .actions
+  /     = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true' do
+  /       = fa_icon('plus-circle')
+  /       %span Insert Content
+
+
 .spacer
