--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -29,6 +29,9 @@
       padding-left: 5px;
       font-size: 12px;
     }
+    i {
+      font-size: 20px;
+    }
     &:hover {
       text-decoration: none;
     }
@@ -36,12 +39,10 @@
 }
 
 .tenon-content {
-  margin-top: 20px;
+  margin-top: 10px;
   // @import "variables";
   // @import "styleguides/styleguide";
   // @extend body;
-  padding-top: 10px;
-  border-top: 1px solid $tn-med-grey;
   .tn-tc-row {
     @include transition(box-shadow 0.25s ease-in);
     @include transition(border 0.25s ease-in);
@@ -226,7 +227,7 @@
 
 .image-controls {
   @include transition(none);
-  &.full-width-image, &.three-column-image {
+  &.full-width-image, &.three-column-image, &.four-column-image {
     .grow-image, .shrink-image, .swap-sides {
       display: none;
     }
