only show insert content button on last row

--- a/app/assets/stylesheets/tenon/mixins.css.scss
+++ b/app/assets/stylesheets/tenon/mixins.css.scss
@@ -9,7 +9,7 @@
 
     &:before {
       float: $float;
-      padding: 1px 2px 0;
+      padding: 0 2px;
       color: $unchecked-color;
       content: $unchecked;
       font: 22px $font-family;
