styled hr in modal windows

--- a/app/assets/stylesheets/tenon/ui/modals.css.scss
+++ b/app/assets/stylesheets/tenon/ui/modals.css.scss
@@ -104,6 +104,10 @@
 .modal-body {
   position: relative;
   padding: 20px;
+  hr {
+    height: 1px;
+    background-color: $tn-med-grey;
+  }
 }
 
 .modal-footer {
