--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -31,6 +31,10 @@
         = f.check_box :show_in_menu, class: 'tn-checkbox-right'
         = f.super_label :show_in_menu, "Show in Menu?"
 
+      .form-group.inline.bordered
+        = f.check_box :show_contact_form, class: 'tn-checkbox-right'
+        = f.super_label :show_contact_form, "Show in Contact Form?"
+
       = publish_box(f, @page)
 
     %h4.box-label Publish Your Page
