changed the contacts fa_icon in main_nav.html to envelope

--- a/app/views/tenon/shared/_main_nav.html.haml
+++ b/app/views/tenon/shared/_main_nav.html.haml
@@ -9,5 +9,5 @@
       = nav_item 'Users', users_path, 'user'
       = nav_item 'Events', events_path, 'calendar'
       = nav_item 'Galleries', galleries_path, 'th'
-      = nav_item 'Contacts', contacts_path, 'mail'
+      = nav_item 'Contacts', contacts_path, 'envelope'
       = nav_item 'Settings', settings_path, 'gear'
