fixed select2 styling issues

--- a/app/assets/stylesheets/tenon/ui/list-style-toggle.css.scss
+++ b/app/assets/stylesheets/tenon/ui/list-style-toggle.css.scss
@@ -11,6 +11,7 @@
   border: 2px solid $tn-med-grey;
   border-radius: 5px;
   background: #fff;
+  font-size: 20px;
 
   a {
     @include transition(all 0.2s ease-in);
