--- a/app/assets/stylesheets/tenon/ui/select2-custom.css.scss
+++ b/app/assets/stylesheets/tenon/ui/select2-custom.css.scss
@@ -2,15 +2,16 @@
 // Tenon Select2 style customizations
 // */
 
-//   .select2-choice {
-//     // > .select2-chosen {
-//     //   margin-right: 0;
-//     // }
-
 .select2-container {
   display: block;
   width: auto;
-  text-align: right;
+  text-align: left;
+  input[type=text].select2-input {
+    padding: 5px;
+    text-align: left;
+    font-weight: normal;
+    font-size: 14px;
+  }
 }
 
 .select2-container .select2-choice {
@@ -21,6 +22,7 @@
   text-align: left;
   text-transform: uppercase;
   font-size: 13px;
+  box-shadow: none;
 }
 
 .select2-dropdown-open .select2-choice {
@@ -40,21 +42,10 @@
   margin-right: 0;
 }
 
-.select2-container .select2-choice abbr {
-  // background: image-url("select2/select2.png") right top no-repeat;
-}
-
 .select2-container .select2-choice .select2-arrow {
   width: 20px;
   background: none;
   border: 0;
-}
-
-.select2-container .select2-choice .select2-arrow b {
-  // background: image-url('select2/select2.png') no-repeat 0 1px;
-  // background-image: image-url("select2/select2x2.png") !important;
-  // background-size: 60px 40px !important;
-  // background-repeat: no-repeat !important;
 }
 
 .select2-container-active.select2-dropdown-open {
@@ -73,14 +64,6 @@
 .select2-results .select2-selection-limit {
   padding: 0;
 }
-
-
-.select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
-  // background-image: image-url('select2/select2x2.png') !important;
-  // background-size: 60px 40px !important;
-  // background-repeat: no-repeat !important;
-}
-
 
 .select2-container-multi.select2-dropdown-open {
   border: inherit;
