made a bunch of margins and padding 16px instead of 20px to try to standardize things, also commented out the breadcrumb bar

--- a/app/assets/stylesheets/tenon/layout/main-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav.css.scss
@@ -57,7 +57,7 @@
         a {
           @include transition(all .2s ease);
           display: block;
-          padding: 14px 20px 14px 16px;
+          padding: 14px 16px;
           border-bottom: 1px solid $tn-sidebar;
           background: $tn-nav;
           color: $tn-grey;
