--- a/app/assets/stylesheets/tenon/ui/quick-search.css.scss
+++ b/app/assets/stylesheets/tenon/ui/quick-search.css.scss
@@ -17,7 +17,10 @@
   }
 
   i {
-    padding-right: 16px;
+    padding-right: 12px;
+    @include media($tablet-breakpoint) {
+      padding-right: 16px;
+    }
   }
 }
 
