--- a/app/assets/stylesheets/tenon/ui/section-headers.css.scss
+++ b/app/assets/stylesheets/tenon/ui/section-headers.css.scss
@@ -36,7 +36,6 @@ header {
       clear: both;
       border-top: 1px solid $tn-med-grey;
       border-left: 0;
-      padding-left: 12px;
       height: 50px;
     }
 
@@ -60,13 +59,11 @@ header {
   }
 
   .header-tool {
-
     @include media($mobile-breakpoint) {
       border-right: 1px solid $tn-med-grey;
-      border-left: 0;
     }
 
-    float: left;
+    float: right;
     padding: 0;
     height: 50px;
     border-left: 1px solid $tn-med-grey;
@@ -74,6 +71,7 @@ header {
 
     &:last-child {
       margin-right: 0;
+      border-right: 0;
     }
   }
 }
