Use cycle empty string instead of cycle nil

--- a/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
@@ -1,5 +1,5 @@
 .four-column-image
   - row.pieces.each do |piece|
-    .four.piece{class: cycle(nil, nil, nil, 'omega')}
+    .four.piece{class: cycle('', '', '', 'omega')}
       = render "tenon/tenon_content/piece_types/display/image", piece: piece
   .spacer
