--- a/app/views/tenon/tenon_content/row_types/display/_two_column_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_two_column_text.html.haml
@@ -1,5 +1,5 @@
 .two-column-text
   - row.pieces.each do |piece|
-    .six.piece{class: cycle(nil, 'omega')}
+    .six.piece{class: cycle('', 'omega')}
       = render "tenon/tenon_content/piece_types/display/text", piece: piece
   .spacer
