--- a/app/views/tenon/tenon_content/row_types/form/_three_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_three_column_image.html.haml
@@ -2,6 +2,6 @@
   = f.hidden_field :list_order
   = f.hidden_field :row_type
   = f.fields_for :pieces do |piece|
-    .tn-tc-piece.asset-field.four{ class: cycle(nil, nil, 'omega') }
+    .tn-tc-piece.asset-field.four{ class: cycle('', '', 'omega') }
       = render "tenon/tenon_content/piece_types/form/image", f: piece, position: piece.object.position
   .spacer
