--- a/app/views/tenon/tenon_content/row_types/form/_three_column_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_three_column_text.html.haml
@@ -2,6 +2,6 @@
   = f.hidden_field :list_order
   = f.hidden_field :row_type
   = f.fields_for :pieces do |piece|
-    .four.piece{class: cycle(nil, nil, 'omega')}
+    .four.piece{class: cycle('', '', 'omega')}
       = render "tenon/tenon_content/piece_types/form/text", f: piece, position: piece.object.position
   .spacer
