--- a/app/views/tenon/posts/_form.html.haml
+++ b/app/views/tenon/posts/_form.html.haml
@@ -34,6 +34,12 @@
           = f.super_label :post_categories, 'Categories'
           = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { }, {multiple: true}
 
+    %h4.box-label Author
+    .box
+      .form-group.bordered
+        = f.super_label :user_id, 'Author'
+        = f.collection_select :user_id, Tenon::User.approved, :id, :email, {:include_blank => "(No Author)"}
+
     %h4.box-label Publish Your Post
     .box
       .form-group.inline.bordered
