--- a/app/assets/stylesheets/tenon/ui/login.css.scss
+++ b/app/assets/stylesheets/tenon/ui/login.css.scss
@@ -60,9 +60,9 @@
     float: right;
   }
 
-  .alert {
+  .flash {
     margin: 0;
-    padding: 6px 24px;
+    padding: 16px 24px;
     background: #f8ffb9;
     color: $tn-dark-grey;
     text-transform: uppercase;
